Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -16,29 +16,13 @@ The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-
 
 The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This harmonization series has three years: 1998, 2008, and 2017. The first year 1998 does not have migration section compared to the other two years. 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. In terms of geographical coverage, all three years cover the whole country and the data are nationally representative. 
 
-Below is a table showing simple size in the raw data and official report:
+Below is a table showing each year's simple size with their official annual reports linked:
 
-| **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
-| :---------------:	| :---------------:		| :------------------:	 	| :--------------:	| :------------------:	|:----:| 
-| Kailahun District | YES | 14 | YES | 14 |NA|
-| Kenema City       | YES | 14 | YES | 28 | Kenema city and district are combined as one in the data.|
-| Kenema District   | YES | 14 | YES | -  | See Kenama City. | 
-| Koidu/New Sembehun City | YES | 14 | NO | NA | See Kono district. |
-| Kono District     | YES | 14 | YES | 28 | Koido and Kono are combined as one in the data.|
-| Makeni City       | YES | 10 | NO  | NA | NA |
-| Bombali District  | YES | 12 | YES | 22 | NA |
-| Kambia District   | YES | 12 | YES | 13 | NA |
-| Koinadugu District| YES | 12 | YES | 12 | NA |
-| Port Loko District| YES | 12 | YES | 12 | NA |
-| Tonkolili District| YES | 12 | YES | 12 | NA |
-| Bo City           | YES | 14 | YES | 29 | Bo city and district are combined as one in the data.|
-| Bo District       | YES | 14 | YES | -  | See Bo City. |
-|Bonthe Municipality| YES | 6  | YES | 18 | Bonthe Municipality and district are combined as one in the data.|
-| Bonthe District   | YES | 12 | YES | -  | See Bonthe Municipality. |
-| Moyamba District  | YES | 12 | YES | 12 | NA |
-| Pujehun District  | YES | 12 | YES | 12 | NA |
-| Freetown City     | YES | 50 | YES | 51 | Called "Western Urban" in the data.|
-|Western Rural District| YES | 20 | YES | 21 | NA |
+| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **# of PSU**	| **Planned Sample Size(# HH)**	| **Planned # of PSU**	|
+| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	 	|
+| [1998](utilities/NPL_LFS_1998_report.pdf)  | 14,355 | 74,622  |  20,085,787  |  719  | 14,400 | 720 |
+| [2008](utilities/NPL_LFS_2008_report.pdf)  | 15,976 | 76,208  |  24,075,099  |  799  | 15,976 | 799 |
+| [2017](utilities/NPL_LFS_2017_report.pdf)  | 18,000 | 77,638  |  29,022,288  |  900  | 18,000 | 900 |
 
 ## Where can the data be found?
 
