Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -30,11 +30,14 @@ The Microdata is freely available on the public [World Bank microdata library](h
 
 ## What is the sampling procedure?
 
-The survey uses a two-stage cluster sampling methodology on a stratified cluster sample with oversampling in urban areas for non-response. 280 enumeration areas are selected from four regions which contain 19 districts or cities plus Western region as a whole, with 15 households randomly selected in each for a total 4,200 (4,199 in the data eventually) households as planned. SSL conducted the sampling using the 2004 Population and Housing Census as the sampling frame. The sample size was calculated using the formula below:
+For 1998 and 2008, the total number of household is divided evenly between rural and urban areas. During the selection, a two-stage stratified sampling procedure based on probability proportional to size (PPS) was applied in both years. In the first stage, wards (PSUs) were selected with PPS, where the number of households in the ward at the time of the census provided the measure of size. In the second stage, from all the households listed in the selected PSUs, 20 households were selected from each on a systematic sampling basis. 
 
-![formula](utilities/sampling_formula.png)
+The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the probelm that too few PSUs with large number of households and most of the PSUs have small number of housoeholds. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology is are illustrated below and can be found on page 3 in the annual official LFS report linked above to 2017 in the table. 
 
-(*NOTE: The target number of households in the sample, i.e. the sample size, was thus estimated at 4,200, based on the computed value of 4296 rounded down to 4200 for ease of use and due to budget constraints.*)
+```
+This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between
+the stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some” strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all” stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural areas and urban areas of province 3 only.
+```
 
 ## What is the geographic significance level?
 
