Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -26,7 +26,7 @@ Below is a table showing each year's simple size with their official annual repo
 
 ## Where can the data be found?
 
-The Microdata is freely available on the public [World Bank microdata library](https://microdata.worldbank.org/index.php/catalog/2687). The data and relevant documents are available from the [SSL website](http://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html). 
+The NPL LFS data is not publicly available. All the data we used was downloaded from SARRAW via datalibweb using the command `datalibweb, country(NPL) year(2017) type(SARRAW) surveyid(NLFS) clear`. It requires team members request the data and SAR team to approve it to download the data. Hence, the data is only accessible among World Bank colleagues upon request.
 
 ## What is the sampling procedure?
 
@@ -35,34 +35,16 @@ For 1998 and 2008, the total number of household is divided evenly between rural
 The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the probelm that too few PSUs with large number of households and most of the PSUs have small number of housoeholds. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology is are illustrated below and can be found on page 3 in the annual official LFS report linked above to 2017 in the table. 
 
 ```
-This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between
-the stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some” strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all” stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural areas and urban areas of province 3 only.
+This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between the stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some” strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all” stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural areas and urban areas of province 3 only.
 ```
 
 ## What is the geographic significance level?
 
-It is designed to be representative of district populations.
+In 1998 and 2008, the distribution of the total 75 districts are distributed by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
+![districts_1998_2008](utilities/districts_distribution.png)
+
 
 ## Other noteworthy aspects  
-
-### Addressing enumeration code duplication across districts/cities
-
-In the raw dataset, 4 enumeration area (EA) codes replicated in other districts/cities. Or in other words, there are cases where one same EA code appears in different districts/cities. The four replicated EA codes are shown in the screenshot below:
-
-![duplication](utilities/duplicated%20EA.png)
-
-Considering the pairs of districts being duplicated are adjacent to each other, we reasonably suppose that some people living very near the border or with high mobility between the two adjoining area might be assigned to the neighbor district whereas they deem themselves living in the other district. Therefore, following this logic, we overwrote some districts, specifically the district with fewer observations compared with the other district that contain the same EA code.
-
-| **EA Code**	| **Original District Name**	| **Changed to**	| **Cases Overwritten**	|
-| :---------------:	| :---------------:		| :------------------:	 	| :--------------:	|
-| 240203041 | 22. Kambia |  24. Port Loko | 6 |
-| 320504031 | 31. Bo | 32. Bonthe | 7 |
-| 420805102 | 41. Western Rural  | 42. Western Urban | 11 |
-| 420806142 | 41. Western Rural  | 42. Western Urban | 6  |
-
-### Missing Strata
-
-Strata in NPL, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of NPL. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence, we did not code strata.
 
 ### Household Weight - Two Different Weighting Variables
 
@@ -77,23 +59,6 @@ To compare, here are WAP of using 28-value and 280-value weights respectively.
 ![280value](utilities/wap_weight280.png)
 
 Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
-
-### Difference with ILO Data
-
-The choice of weight variable also showed up in the quality checks, when comparing with ILO data. Below are the results from ILOSTAT:
-
-![ILO_WAP](utilities/ILO.png)
-
-The population aged 15 and above (and their labor status) is in line with the data if the “simplified” 28 values weights are used:
-
-![28value_ineligible](utilities/wap_weight28_incl_ineligible.png)
-
-If the more detailed weights are used (as in the GLD harmonization) the ratios stay roughly the same but the absolute numbers increase:
-
-![280value_ineligibile](utilities/wap_weight280_incl_ineligible.png)
-
-The GLD data is thus different to the ILO published data yet we believe it to be containing the correct information.
-
 
 ### Wage Analysis Against Age
 
