--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -43,6 +43,7 @@ This stratification method jointly minimizes the total coefficient of variation 
 In 1998 and 2008, the distribution of the total 75 districts are distributed by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
 ![districts_1998_2008](utilities/districts_distribution.png)
 
+In 2017, the forst level of administration changed to seven provinces and thus the geographic significance level of 2017 is the combination of province and rural/urban divisions, which generates fourteen domains.
 
 ## Other noteworthy aspects  
 
@@ -50,13 +51,6 @@ In 1998 and 2008, the distribution of the total 75 districts are distributed by 
 
 In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to NPL's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
 
-![WAP_report](utilities/reportWAP.png)
-
-To compare, here are WAP of using 28-value and 280-value weights respectively. 
-
-![28value](utilities/wap_weight28.png)
-
-![280value](utilities/wap_weight280.png)
 
 Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
 
