Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -10,11 +10,11 @@
 
 ## What is the NPL LFS?
 
-The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated with the aim to better monitor labor market and provide comprehensive statistics on employment, unemployment, and underemployment. The 1998 LFS was carried out by the Central Bureau of Statistics (CBS) from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
+The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated with the aim to better monitor the labour market and provide comprehensive statistics on employment, unemployment, and underemployment. The 1998 LFS was carried out by the Central Bureau of Statistics (CBS) from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
 
 ## What does the NPL LFS cover?
 
-The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This harmonization series has three years: 1998, 2008, and 2017. The first year 1998 does not have migration section compared to the other two years. 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. In terms of geographical coverage, all three years cover the whole country and the data are nationally representative. 
+The NPL LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. This harmonization series has three years: 1998, 2008, and 2017. The first year, 1998 does not have migration section compared to the other two years. 1998 and 2008 both have two recall periods, 7-day and 12-month recall periods whereas 2017 only has 7-day recall period. In terms of geographical coverage, all three years cover the whole country, and the data are nationally representative. 
 
 Below is a table showing each year's simple size with their official annual reports linked:
 
@@ -30,9 +30,9 @@ The NPL LFS data is not publicly available. All the data we used was downloaded 
 
 ## What is the sampling procedure?
 
-For 1998 and 2008, the total number of household is divided evenly between rural and urban areas. During the selection, a two-stage stratified sampling procedure based on probability proportional to size (PPS) was applied in both years. In the first stage, wards (PSUs) were selected with PPS, where the number of households in the ward at the time of the census provided the measure of size. In the second stage, from all the households listed in the selected PSUs, 20 households were selected from each on a systematic sampling basis. 
+For 1998 and 2008, the total number of households is divided evenly between rural and urban areas. During the selection, a two-stage stratified sampling procedure based on probability proportional to size (PPS) was applied in both years. In the first stage, wards (PSUs) were selected with PPS, where the number of households in the ward at the time of the census provided the measure of size. In the second stage, from all the households listed in the selected PSUs, 20 households were selected from each on a systematic sampling basis. 
 
-The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the probelm that too few PSUs with large number of households and most of the PSUs have small number of housoeholds. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology is are illustrated below and can be found on page 3 in the annual official LFS report linked above to 2017 in the table. 
+The level of representativeness changed from four regions to seven provinces and hence the sample design in 2017 is different from the previous years in stratification and sample selection. During the sample selection, 2017 has the problem that too few PSUs with large number of households and most of the PSUs have small number of households. To address this issue, 2017 LFS used a stratification strategy which stratifies PSUs in each domain (province combined with rural/urban division) into three following the Lavallee-Hidiroglou (LH) algorithm. Details of this methodology are illustrated below and can be found on page 3 in the annual official LFS report linked above to 2017 in the table. 
 
 ```
 This stratification method jointly minimizes the total coefficient of variation and the sample size in the choice of stratum boundaries and in the determination of sampling rate per stratum. Further accounting for the possible discrepancy between the stratification variables (number of households) and the target variable (e.g., number of employed individuals), modified LH Algorithm is used for a thorough review of methods of stratifying skewed populations. Modified LH Algorithm used to identify stratum boundaries of the three strata. Stratum 1 and Stratum 2 are smaller than Stratum 3, and are called the “take some” strata. Stratum 3, comprising of “bigger” PSUs where big is defined in terms of number of households, is also called “take all” stratum. From all the strata, samples were drawn from probability proportional to size (PPS) except in the areas where all the PSUs were taken in the sample. Regarding the sampling from stratum 3, the "take all" criterion was followed in all the rural areas and urban areas of province 3 only.
@@ -40,10 +40,10 @@ This stratification method jointly minimizes the total coefficient of variation 
 
 ## What is the geographic significance level?
 
-In 1998 and 2008, the distribution of the total 75 districts are distributed by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
+In 1998 and 2008, the distribution of the total 75 districts is by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
 ![districts_1998_2008](utilities/districts_distribution.png)
 
-In 2017, the forst level of administration changed to seven provinces and thus the geographic significance level of 2017 is the combination of province and rural/urban divisions, which generates fourteen domains.
+In 2017, the first level of administration changed to seven provinces and thus the geographic significance level of 2017 is the combination of province and rural/urban divisions, which generates fourteen domains.
 
 ## Other noteworthy aspects  
 
