Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -47,14 +47,20 @@ In 2017, the first level of administration changed to seven provinces and thus t
 
 ## Other noteworthy aspects  
 
-### Household Weight - Two Different Weighting Variables
+### The Splits of Nawalparas and Rukum 
 
 In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to NPL's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
 
 
 Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
 
-### Wage Analysis Against Age
+### Change of the Employment Standard
 
 Our single-year quality check result of NPL 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
+
+
+### Definition of Migrants
+
+
+### Coding of Industry and Occupation codes
 
