Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -47,12 +47,13 @@ In 2017, the first level of administration changed to seven provinces and thus t
 
 ## Other noteworthy aspects  
 
-### The Splits of Nawalparas and Rukum 
+### Names of the Provinces 
 
-In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to NPL's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
+### The Splits of Nawalparasi and Rukum 
 
-
-Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
+Two districts in Nepal have experienced an administrative change during the harmonized years. Nawalparasi divided into district Parasi and district Nawalpur in 2015. And now district Parasi is in Gandaki province whereas district Nawalpur is in Lumbini province. Similarly, district Rukum was split into two districts in 2017. It was split into district Western Rukum located in Lumbini province and Eastern Rukum in Karnali province. Instead of using the new district names, the raw data of 2017 still uses the original district names Nawalparas and Rukum, which matches one disrtict to two different provinces. To correct this mismatch, we recoded these two districts by splitting the observations and assigning them to their new districts, based on their provinces. In this way we made the total number of districtd from 75 to 77. 
+ 
+Because these changes happened after 2008 and 2008 did not use province as its administrative level in the survey, we only recoded the two districts to match observations to their current province in 2017.      
 
 ### Change of the Employment Standard
 
@@ -62,5 +63,5 @@ Our single-year quality check result of NPL 2014 shows that the relationship bet
 ### Definition of Migrants
 
 
-### Coding of Industry and Occupation codes
+### Classifications of Industry and Occupation
 
