Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -51,7 +51,7 @@ In 2017, the first level of administration changed to seven provinces and thus t
 
 ### The Splits of Nawalparasi and Rukum 
 
-Two districts in Nepal have experienced an administrative change during the harmonized years. Nawalparasi divided into district Parasi and district Nawalpur in 2015. And now district Parasi is in Gandaki province whereas district Nawalpur is in Lumbini province. Similarly, district Rukum was split into two districts in 2017. It was split into district Western Rukum located in Lumbini province and Eastern Rukum in Karnali province. Instead of using the new district names, the raw data of 2017 still uses the original district names Nawalparas and Rukum, which matches one disrtict to two different provinces. To correct this mismatch, we recoded these two districts by splitting the observations and assigning them to their new districts, based on their provinces. In this way we made the total number of districtd from 75 to 77. 
+Two districts in Nepal have experienced an administrative change during the harmonized years. Nawalparasi was divided into district Parasi and district Nawalpur in 2015. And now the district Parasi is in Gandaki province whereas district Nawalpur is in Lumbini province. Similarly, district Rukum was split into two districts in 2017. It was split into district Western Rukum located in Lumbini province and Eastern Rukum in Karnali province. Instead of using the new district names, the raw data of 2017 still uses the original district names Nawalparas and Rukum, which matches one district to two different provinces. To correct this mismatch, we re-coded these two districts by splitting the observations and assigning them to their new districts, based on their provinces. In this way we increased the total number of district from 75 to 77. 
  
 Because these changes happened after 2008 and 2008 did not use province as its administrative level in the survey, we only recoded the two districts to match observations to their current province in 2017.      
 
