Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -41,6 +41,7 @@ This stratification method jointly minimizes the total coefficient of variation 
 ## What is the geographic significance level?
 
 In 1998 and 2008, the distribution of the total 75 districts is by five developing regions and three ecological belts. The five regions are: Eastern, Central, Western, Mid-western, and Far-western. And the three ecological belts are: mountain, hill, and terai. The distribution is shown in the table below. The geographic significance level of both years is region by rural and urban divisions. 
+
 ![districts_1998_2008](utilities/districts_distribution.png)
 
 In 2017, the first level of administration changed to seven provinces and thus the geographic significance level of 2017 is the combination of province and rural/urban divisions, which generates fourteen domains.
@@ -48,6 +49,23 @@ In 2017, the first level of administration changed to seven provinces and thus t
 ## Other noteworthy aspects  
 
 ### Names of the Provinces 
+
+In the offical report of 2017, four out of seven provinces were named after numbers (i.e., Province 1, Province 2, Province 3 and Province 5) instead of their actual province names. By checking the populationsand and districts they have, we confirmed their names:
+<br>
+<ins>1) Province 1: Koshi</ins>
+<br>
+<ins>2) Province 2: Madhesh</ins>
+<br>
+<ins>3) Province 3: Bagmati</ins>
+<br>
+<ins>4) Province 4: Gandaki</ins>
+<br>
+<ins>5) Province 5: Lumbini</ins>
+<br>
+<ins>6) Province 6: Karnali</ins> 
+<br>
+<ins>7) Province 7: Sudurpashchim</ins>
+<br>
 
 ### The Splits of Nawalparasi and Rukum 
 
