--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -50,7 +50,8 @@ In 2017, the first level of administration changed to seven provinces and thus t
 
 ### Names of the Provinces 
 
-In the offical report of 2017, four out of seven provinces were named after numbers (i.e., Province 1, Province 2, Province 3 and Province 5) instead of their actual province names. By checking the populationsand and districts they have, we confirmed their names:
+In the official report of 2017, four out of seven provinces were named after numbers (i.e., Province 1, Province 2, Province 3 and Province 5) instead of their actual province names and so does the raw data set. By checking the populations and and districts they have, we confirmed their names as:
+
 <br>
 <ins>1) Province 1: Koshi</ins>
 <br>
@@ -75,8 +76,7 @@ Because these changes happened after 2008 and 2008 did not use province as its a
 
 ### Change of the Employment Standard
 
-Our single-year quality check result of NPL 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
-
+1998 and 2008 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2017 follows the ICLS 19. Therefore, production of goods for own use such as tailoring or making mats for the household, or collecting water or firewood, count as "work" in 1998 and 2008 only. Accordingly, people engaing in these jobs are considered *employed* only in 1998 and 2008.   
 
 ### Definition of Migrants
 
