Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -76,7 +76,7 @@ Because these changes happened after 2008 and 2008 did not use province as its a
 
 ### Change of the Employment Standard
 
-1998 and 2008 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2017 follows the ICLS 19. Therefore, production of goods for own use such as tailoring or making mats for the household, or collecting water or firewood, count as "work" in 1998 and 2008 only. Accordingly, people engaing in these jobs are considered *employed* only in 1998 and 2008.   
+1998 and 2008 follow the 13th International Conference of Labour Statisticians (ICLS) whereas 2017 follows the ICLS 19. Therefore, production of goods for own use such as tailoring or making mats for the household, or collecting water or firewood, count as "work" in 1998 and 2008 only. Accordingly, people engaging in these jobs are considered *employed* only in 1998 and 2008.   
 
 ### Definition of Migrants
 
