Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -80,6 +80,16 @@ Because these changes happened after 2008 and 2008 did not use province as its a
 
 ### Definition of Migrants
 
+As shown below, questions **B09** and **B13** in the questionnaire of 2017 are directly related to whether a given respondent is a migrant or not. B09 and B13 correspond to original variables `birth_same` and `last_res` in the raw data set. But tabulating these two variables indicates that 11,922 observations whose last usual place of residence is in the same municipality were not born in the same place.  
+
+![questionnaire_2017](utilities/questionnaire_migrant.png)
+![tabulation_2017](utilities/migrant.png)
+
+The annual report of 2017 states the defition of migrant as belows:
+
+![definition_2017](utilities/migrant_def.png)
+
+Therefore, according to this definition, observations whose birhtplaces are not current municipalities (or in other words, `birth_same` is equal to 2) should be regarded as migrants. In this way, the wrighted number of migrants matched the reported data as 10,510,000.
 
 ### Classifications of Industry and Occupation
 
