Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -85,11 +85,11 @@ As shown below, questions **B09** and **B13** in the questionnaire of 2017 are d
 ![questionnaire_2017](utilities/questionnaire_migrant.png)
 ![tabulation_2017](utilities/migrant.png)
 
-The annual report of 2017 states the defition of migrant as belows:
+The annual report of 2017 states the definition of migrant as bellows:
 
 ![definition_2017](utilities/migrant_def.png)
 
-Therefore, according to this definition, observations whose birhtplaces are not current municipalities (or in other words, `birth_same` is equal to 2) should be regarded as migrants. In this way, the wrighted number of migrants matched the reported data as 10,510,000.
+Therefore, according to this definition, observations whose birthplaces are not current municipalities (or in other words, `birth_same` is equal to two) should be regarded as migrants. In this way, the weighted number of migrants matched the reported data as 10,510,000.
 
 ### Classifications of Industry and Occupation
 
