Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -93,3 +93,4 @@ Therefore, according to this definition, observations whose birthplaces are not 
 
 ### Classifications of Industry and Occupation
 
+In general, NPL 1998 and NPL 2008 both follow ISIC Rev.3 and ISCO-88 for industrial and occupational classifications respectively, while NPL 2017 follows ISIC Rev.4 and ISCO-08. The national and international classifications only have a few cases of discrepancy. The detailed corresponding table is included in a [separate document](Correspondence_National_International_Classifications.md). 
