Update 1. Introduction to Nepal LFS.md

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -80,16 +80,16 @@ Because these changes happened after 2008 and 2008 did not use province as its a
 
 ### Definition of Migrants
 
-As shown below, questions **B09** and **B13** in the questionnaire of 2017 are directly related to whether a given respondent is a migrant or not. B09 and B13 correspond to original variables `birth_same` and `last_res` in the raw data set. But tabulating these two variables indicates that 11,922 observations whose last usual place of residence is in the same municipality were not born in the same place.  
+As shown below, questions **B09** and **B13** in the questionnaire of 2017 are directly related to whether a given respondent is a migrant or not. B09 and B13 correspond to original variables `birth_same` and `last_res` respectively in the raw data set. But tabulating these two variables indicates that 11,922 observations whose last usual place of residence is in the same municipality were not born in the same place. This might be caused by the lack of clarity of "usual place of residence" and the reference period of migration.   
 
 ![questionnaire_2017](utilities/questionnaire_migrant.png)
 ![tabulation_2017](utilities/migrant.png)
 
-The annual report of 2017 states the definition of migrant as bellows:
+The annual report of 2017 states the definition of "Lifetime Migration" as the follows:
 
 ![definition_2017](utilities/migrant_def.png)
 
-Therefore, according to this definition, observations whose birthplaces are not current municipalities (or in other words, `birth_same` is equal to two) should be regarded as migrants. In this way, the weighted number of migrants matched the reported data as 10,510,000.
+According to this definition, observations whose birthplaces are not current municipalities (or in other words, `birth_same` is equal to two) should be regarded as migrants. In this way, the weighted number of migrants matched the reported data as 10,510,000. However,this is just a country-specific definition of migration. To incorporate this "Lifetime Migration" into the GLD definition, we define that inaddition to observations whose birthplace is not their current residence, observations born in the same municipality but have different last usual places of residence are also migrants. Furthermore, we set the age limit to 14 and above, excluding people aged from 5 to 13. Hence, we have 10,203,959 migrants following our definition.
 
 ### Classifications of Industry and Occupation
 
