Update 1. Introduction to Nepal LFS.md
SMall addition so the first sentence is not only talking of 1998. Cosmetic.

--- a/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
+++ b/Support/B - Country Survey Details/NPL/LFS/1. Introduction to Nepal LFS.md
@@ -10,7 +10,7 @@
 
 ## What is the NPL LFS?
 
-The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated with the aim to better monitor the labour market and provide comprehensive statistics on employment, unemployment, and underemployment. The 1998 LFS was carried out by the Central Bureau of Statistics (CBS) from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. 
+The 1998 NPL LFS is the first labor force survey in the country. The Ninth Five-Year Development Plan of Nepal prioritized poverty alleviation through employment generation and skills enhancement. The national LFS was initiated with the aim to better monitor the labour market and provide comprehensive statistics on employment, unemployment, and underemployment. The 1998 LFS was carried out by the Central Bureau of Statistics (CBS) from 1998 to 1999, with technical assistance from the International Labour Organization and financial support from the United Nations Development Programme. The second LFS took place in 2008, while the latest available data is from 2017.
 
 ## What does the NPL LFS cover?
 
